--- a/app.css
+++ b/app.css
@@ -3,3 +3,11 @@ canvas {
     width: auto;
     height: auto;
 }
+
+div.flash-green {
+    border: 50px solid green;
+}
+
+div.flash-red {
+    border: 50px solid red;
+}
